add content to lalande.html
Former-commit-id: 029ae90de1a771c18f3ec3037d1302f9b9e468ad

--- a/lalande.html
+++ b/lalande.html
@@ -130,36 +130,46 @@ is no place else in the solar system (beyond Earth) that has a fan page like thi
 								triggered by the vibrations of a moonquake or an impact in the area, and then roll quite far before coming to rest. Their fluid look indicates a high proportion of small grains in the material slipping down the face.
 							</p>
 							<p>
-								Things like this are important to consider when you are deciding how to send rovers into this terrain. This is landslide territory. The galleries of Cernan's Promise go right through the middle of it, in fact going through the next gap below the lion's tail one to reduce excavation through those outcroppings that look so rocky. The mass and activity of a rover might not be enough to destabilize the slope, or your extremely expensive rovers might be at serious risk of crushing or burial. It will have to be done carefully.
+								Things like this are important to consider when you are deciding how to send rovers into this terrain. This is landslide territory. The galleries of Cernan's Promise go right through the middle of it, in fact going through the next gap below the lion's
+								tail one to reduce excavation through those outcroppings that look so rocky. The mass and activity of a rover might not be enough to destabilize the slope, or your extremely expensive rovers might be at serious risk of crushing or burial. It will
+								have to be done carefully.
 							</p>
 							<p>
-								Those outcroppings are interesting. This image reveals how vertical their faces are, implying the material there is quite cohesive. I don't want to call it rock, because it is too shallow to be a layer of solid rock, and there are no processes on the	Moon that produce sedimentary rock. That requires water. Once that occured to me, as i was writing this up, i went on a little mission to find out what that material could be, then. That got nowhere, but led me to other interesting things that were productive. This happens to me all the time. Anyhow, i don't think that material can be supposed to be like rock, but instead like an extra-compacted version of regolith. In particular, the thermal properties of it need to be assumed to be pretty similar to hard-packed regolith, meaning it is more like insulation than a thermal sink.
+								Those outcroppings are interesting. This image reveals how vertical their faces are, implying the material there is quite cohesive. I don't want to call it rock, because it is too shallow to be a layer of solid rock, and there are no processes on the
+								Moon that produce sedimentary rock. That requires water. Once that occured to me, as i was writing this up, i went on a little mission to find out what that material could be, then. That got nowhere, but led me to other interesting things that
+								were productive. This happens to me all the time. Anyhow, i don't think that material can be supposed to be like rock, but instead like an extra-compacted version of regolith. In particular, the thermal properties of it need to be assumed to be
+								pretty similar to hard-packed regolith, meaning it is more like insulation than a thermal sink.
 							</p>
 					</figure>
 					<figure class="pix" id="thorium" style="max-width: 703px;">
 						<img src="img/Lunar_Thorium_hotspots.jpg">
 						<figcaption>Map of distribution of thorium on the Moon, by NASA's Clementine probe. Lalande is in the square.</figcaption>
-							<p>Here we can talk about <a class="http://www.psrd.hawaii.edu/Oct04/SaU169.html">SaU 169</a>, a meteorite from the Moon that the linked report explains was traced to an origin near Lalande by a rather large team of people who did a rather extensive study on the little thing. The hotspot shows a thorium level of 12 ppm. The meteorite had a level of 33 ppm<sup class="note tooltip" data-tooltip-content="#ThoriumPPM">
+						<p>Here we can talk about <a class="http://www.psrd.hawaii.edu/Oct04/SaU169.html">SaU 169</a>, a meteorite from the Moon that the linked report explains was traced to an origin near Lalande by a rather large team of people who did a rather extensive
+							study on the little thing. The hotspot shows a thorium level of 12 ppm. The meteorite had a level of 33 ppm<sup class="note tooltip" data-tooltip-content="#ThoriumPPM">
 							[1]</sup> in the impact breccia<sup class="note tooltip" data-tooltip-content="#Breccia">
-							[2]</sup> that mostly composed it.
-       </p>
-</figure>
-<div class="tooltip_templates">
-	<span id="ThoriumPPM">
-             <p>From the report:</p>
-<blockquote> Highly evolved igneous rocks are present on the Moon. Evolved rocks formed from magmas that fractionally crystallized, leaving a residual magma rich in elements that do not readily enter the major rock-forming minerals. The most common class of evolved lunar rock is KREEP, an acronym referring to enrichments (compared to other lunar materials) in potassium (K), rare earth elements (REE), and phosphorus (P). They also contain enrichments in other elements such as zirconium, thorium, and uranium. The formation of evolved magmas involved extensive fractional crystallization in the lunar magma ocean, a huge magmatic system that surrounded the Moon soon after its formation, followed by partial melting of rocks formed from the residual magma. These secondary magmas could have fractionally crystallized further, creating rocks much richer than those observed so far. SaU 169 is without question a KREEP rock. Its thorium (Th) concentration is 33 parts per million in the large impact melt breccia that composes most of the rock. This is higher than all but a few small rock clasts in breccias brought back by the Apollo missions. An interesting feature of the SaU 169 impact melt breccia is that it has a much lower K/Th ratio (137) compared to the average KREEPy rocks (360). This indicates that K and Th, which usually have similar geochemical behavior in magmas, became decoupled from each other, signifying a complicated magmatic history of the lithologies that predated the formation of the impact melt. The rest of the rock is also KREEPy, but does not contain as much Th or REE as does the impact melt breccia, and K/Th is the normal KREEP value.</p>
-												</span>
-</div>
-<div class="tooltip_templates">
-	<span id="Breccia">
-<img src="https://www.moonwards.com/img/SaU169-cross-section.jpg">
-<p>
-Breccia refers to rocks made of smaller chunks glued together by a matrix of another material. So, the thorium content in the chunks could be much higher than the mix overall that the tested breccia is made of. There is <a href="http://i2massociates.com/downloads/ThoriumGeologyandMineralogyofOccurrences.pdf">basalt in Italy</a> with 250 ppm of thorium.
-</p>
-</span>
-</div>
-<figure class="pix" id="boulders" style="max-width: 750px;">						<img src="img/Lal-boulders1.jpg">
-						<figcaption>captions coming</figcaption>
+							[2]</sup> that mostly composed it. There is <a href="http://i2massociates.com/downloads/ThoriumGeologyandMineralogyofOccurrences.pdf">basalt in Italy</a> with 250 ppm of thorium. Once the bedrock of Lalande is being explored, there could be places
+							with good ore there, concentrations much higher than 33 ppm. That rock would also have the highest concentrations of the rare earth elements and uranium.
+						</p>
+					</figure>
+					<div class="tooltip_templates">
+						<span id="ThoriumPPM">
+        <p>From the report:</p>
+							<blockquote> Highly evolved igneous rocks are present on the Moon. Evolved rocks formed from magmas that fractionally crystallized, leaving a residual magma rich in elements that do not readily enter the major rock-forming minerals. The most common class of evolved lunar rock is KREEP, an acronym referring to enrichments (compared to other lunar materials) in potassium (K), rare earth elements (REE), and phosphorus (P). They also contain enrichments in other elements such as zirconium, thorium, and uranium. The formation of evolved magmas involved extensive fractional crystallization in the lunar magma ocean, a huge magmatic system that surrounded the Moon soon after its formation, followed by partial melting of rocks formed from the residual magma. These secondary magmas could have fractionally crystallized further, creating rocks much richer than those observed so far. SaU 169 is without question a KREEP rock. Its thorium (Th) concentration is 33 parts per million in the large impact melt breccia that composes most of the rock. This is higher than all but a few small rock clasts in breccias brought back by the Apollo missions. An interesting feature of the SaU 169 impact melt breccia is that it has a much lower K/Th ratio (137) compared to the average KREEPy rocks (360). This indicates that K and Th, which usually have similar geochemical behavior in magmas, became decoupled from each other, signifying a complicated magmatic history of the lithologies that predated the formation of the impact melt. The rest of the rock is also KREEPy, but does not contain as much Th or REE as does the impact melt breccia, and K/Th is the normal KREEP value.</blockquote>
+							</span>
+					</div>
+					<div class="tooltip_templates">
+						<span id="Breccia">
+							<img src="https://www.moonwards.com/img/SaU169-cross-section.jpg">
+							<p>
+							Breccia refers to rocks made of smaller chunks glued together by a matrix of another material. So, the thorium content in the chunks could be much higher than the mix overall that the tested breccia is made of. The interesting stuff might be in the little bits floating in the sandy brown.
+							</p>
+							</span>
+					</div>
+					<figure class="pix" id="boulders" style="max-width: 750px;"> <img src="img/Lal-boulders1.jpg">
+						<figcaption>Late morning on the central mountains of Lalande. Find the really bright impact crater in the middle of the east mountain, this patch is half a kilometer to the northwest.</figcaption>
+      <p>
+       Large areas of the central mountains of Lalande are covered in boulders. Each of the 3 big ones at the top is 20 m wide (22 yards). The whole western side of that mountain is blanketed with boulders like this
+      </p>
 					</figure>
 					<figure class="pix" style="max-width: 750px;">
 						<img src="img/Lal-boulders2.jpg">
