return _nav.html to previous
Former-commit-id: f275f137f44de9a98d4d22492ceb719bf66080a4 [formerly 83dd16d984c105282b4cb6c09d654076baaf9d73]
Former-commit-id: 0192622b007fc9fccb526d394619f330e3bd8d8b

--- a/lalande.html
+++ b/lalande.html
@@ -168,7 +168,9 @@ is no place else in the solar system (beyond Earth) that has a fan page like thi
 					<figure class="pix" id="boulders" style="max-width: 750px;"> <img src="img/Lal-boulders1.jpg">
 						<figcaption>Late morning on the central mountains of Lalande. Find the really bright impact crater in the middle of the east mountain, this patch is half a kilometer to the northwest.</figcaption>
       <p>
-       Large areas of the central mountains of Lalande are covered in boulders. Each of the 3 big ones at the top is 20 m wide (22 yards). The whole western side of that mountain is blanketed with boulders like this
+       Large areas of the central mountains of Lalande are covered in boulders. Each of the 3 big ones at the top is 20 m wide (22 yards). The whole western side of that mountain is blanketed with boulders like this, but the east side has very few by comparison. Why would that be?
+      </p>
+      <p>And recheck
       </p>
 					</figure>
 					<figure class="pix" style="max-width: 750px;">
