add content to lalande.html
Former-commit-id: 4a9f15d4374a44231552aca91dfab2ac310a2055 [formerly 3f8244ae5167bb3fadacadcc384fa844187ff33f]
Former-commit-id: 639261f467e917c4da73f19279643f01e7a9c6e8

--- a/lalande.html
+++ b/lalande.html
@@ -166,17 +166,36 @@ is no place else in the solar system (beyond Earth) that has a fan page like thi
 							</span>
 					</div>
 					<figure class="pix" id="boulders" style="max-width: 750px;"> <img src="img/Lal-boulders1.jpg">
-						<figcaption>Late morning on the central mountains of Lalande. Find the really bright impact crater in the middle of the east mountain, this patch is half a kilometer to the northwest.</figcaption>
+						<figcaption>Late morning on the central mountains of Lalande. (On Quickmap, find the really bright impact crater in the middle of the east mountain, this patch is half a kilometer to the northwest.)</figcaption>
       <p>
        Large areas of the central mountains of Lalande are covered in boulders. Each of the 3 big ones at the top is 20 m wide (22 yards). The whole western side of that mountain is blanketed with boulders like this, but the east side has very few by comparison. Why would that be?
       </p>
-      <p>And recheck
+      <p>This area is here because it shows how jumbled the results were even though what you see here was all created by the same event, which unfolded very quickly. The asteroid struck with incredible force and threw a huge quantity of material outwards. The material that was thrown straight up, came straight back down again and landed here. How long would that have taken, a few minutes? At the same time, the shockwaves that met here at the crater center caused the ground to be pushed up and created these mountains. The lava produced by the heat of the blast didn't pool here, it was above the line of the melt pool. Since there are jagged broken rocks here of different materials, as shown by their different tones, light and dark, the stuff that hit the ground here wasn't mixed, and wasn't coated in the lava that was all over. The chunks just hit, broke apart some more thanks to that, and have sat there pretty much exactly the same ever since, for something like 1.5 billion years. They don't even have much dust on them, or the different tones wouldn't show up.
       </p>
 					</figure>
 					<figure class="pix" style="max-width: 750px;">
 						<img src="img/Lal-boulders2.jpg">
-						<figcaption>captions coming</figcaption>
+						<figcaption>Same exact place as the previous image, at noon.</figcaption>
+      <p>It looks awfully different at lunar noon, doesn't it? Try the trick of opening each of these images in its own tab by right-clicking and choosing 'View Image' or 'Open in new tab' (depending on which browser you use). Now switch between tabs a few times. The first image exactly overlays the second, everything lines up just the same. But there is no sign at all of that jet-black material in the morning picture. What is that stuff?
+      </p>
+      <p>It is important to remember that the sun was exactly behind the camera when this image was taken. That maximizes the contrast due to different light absorption of materials. Stuff that is light or white typically is material that broke into chunks with nice, clean flat faces, which reflect light best. Those bits could also be of highlands material, which is largely anorthosite, and that is pale. But the black? Basalt is often very dark stone. And the Moon reflects little light. You don't notice, because you look at it in a black sky, but it is as dark as asphalt. The contrast here could have as much to do with the camera settings as anything else. After looking at a bunch of examples of this phenomenon, such as <span class="note-inline tooltip" data-tooltip-content="#black-boulders1">this</span>, and <span class="note-inline tooltip" data-tooltip-content="#black-boulders2">this</span>, and <span class="note-inline tooltip" data-tooltip-content="#black-boulders3">this</span>, it seems to me these places are where big pieces of solid basalt was smashed into smaller pieces still large and jagged enough that dust slips down their faces, leaving their darkness intact. Or maybe something else is going on. Hard to say without going there. At any rate, if you are looking for the rock with the most KREEP, those ones are maybe the best place to start.
+      </p>
 					</figure>
+     <div class="tooltip_templates">
+						<span id="black-boulders1">
+       <img src="https://www.moonwards.com/img/blackBoulders1.jpg">
+      </span>
+     </div>
+     <div class="tooltip_templates">
+						<span id="black-boulders2">
+       <img src="https://www.moonwards.com/img/blackBoulders2.jpg">
+      </span>
+     </div>
+     <div class="tooltip_templates">
+						<span id="black-boulders3">
+       <img src="https://www.moonwards.com/img/blackBoulders3.jpg">
+      </span>
+     </div>
 					<figure class="pix" id="BigLal">
 						<img src="img/LalandeCrop1500.jpg" style="max-width: 1500px;">
 						<figcaption>captions coming</figcaption>
