adding blend4web model to lalande
Former-commit-id: 22e0d5f5df44d61ede896fd4d1711609d43e2f23 [formerly 9e29b97c8fc909c5661858ee20657eb3ff5710b9]
Former-commit-id: 47d97c2b8c4ab3f9b74f71766fbacef962106180

--- a/lalande.html
+++ b/lalande.html
@@ -198,9 +198,22 @@ is no place else in the solar system (beyond Earth) that has a fan page like thi
      </div>
 					<figure class="pix" id="BigLal">
 						<img src="img/LalandeCrop1500.jpg" style="max-width: 1500px;">
-						<figcaption>captions coming</figcaption>
+						<figcaption>All the clearest images of Lalande stitched together into one continuous piece.</figcaption>
+      <p>The highest resolution version of this image is 40,000 pixels on a side, making it 1600 Megapixels big. The version here has been cropped to focus on the crater, the full version includes the surrounding terrain out to a distance of about 6 km (4 miles). It took me a month to make it. Towards the end of that month, i realized there was distortion on the floor of the crater that had crept in due to a bunch of details of how it was done which i'd rather not talk about and you'd probably rather not read. I am green with envy at the mainframe computer access and beautifully precise algorithms that allowed NASA to stitch all of the LRO images together so cleanly, almost perfect alignment everywhere at every zoom level. Alright, so in this version the mountains are off by a few hundred meters. It is still a wonderful thing. Definitely. I won't hear otherwise.
+      </p>
+      <p>
+       For starters, if you are going to build a complete virtual town here with all its infrastructure and industry (and then a city), it really helps to have a highly detailed base map to start with. If you are going to take the very coarse and artifact-ridden LOLA topographical data of this crater and turn it into an accurate 3d model, you need all the images taken when the sun was high, but not at noon when the dazzling contrast prevents you from having any sense of depth. The crater starts to come alive as a real place as its contours are carved digitally into a figure that can me turned, and dived into. When i am able to return to the task and detail it further, i think it will be a real joy. Um, but i'll need two of the very best graphics cards on the market, and to max out my RAM, with faster versions, and maybe overclock the CPU... But that is down the road...
+      </p>
+      <p>Favorite spots of mine: The two lava 'lakes' in the south wall, where lava pooled in scalloped stone dips. The deep narrow gullies in the north wall. The north spur of the blister-like east mountain, crowded with boulders on its west side. The white boulders strewn down the south wall, the largest 100 m across. Just think, that thing was thrown kilometers high, crashed back down, and it is still in one piece. It would take you several minutes to walk around it.
+      </p>
+      <p>So, if you wish to see all these things in detail, there is a cropped version <a href="LalandeImage.html">here</a> that is 11000 pixels on a side and 11 MB. We won't get crazy with the 200 MB master file.
+      </p>
 					</figure>
 				</div>
+  <figure class="framewrap frame16x9">
+						<iframe src="modelProxy0.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+						</iframe>
+		</figure>
 			</div>
 		</div>
 	</section>
