create machines2 includes, add transport content
Former-commit-id: d7949933b49b02208c4e1cc038b92de9cb9f8aa8

--- a/colonies.html
+++ b/colonies.html
@@ -1,7 +1,6 @@
 ---
 layout: content
 title: Moon colony Sites and Structures
-stylesheet: "css/content.nest.sass.css"
 description: "Sites and structure of the virtual lunar colonies.
 Lalande Crater colony uses rich mineral deposits there,
 Peary Crater gets the water frozen in the pole's permanent shadow,
@@ -97,130 +96,9 @@ ongoing high investment changes the possibilities and the best path."
 				</div>
 			</article>
 		</section>
-{% include asideColoniesLalande.html%}
+{% include asideLalandeColony.html %}
 	</div>
-{% include colonyModelsLalande.html%}
+{% include colonyModelsLalande.html %}
 <!--The above include has the include for the comments section -->
-	<div class="container" id="peary">
-		<section>
-			<article class="outerDiv">
-				<div class="innerDiv">
-					<h1>Peary Crater: Water Inside, Eternal Sun Outide</h1>
-					<p>
-						Just a few years ago it was confirmed that in the deep constant
-						shadow of the craters of the Moon's poles there is water. Plus a
-						mix of other substances that were steamed out of the rest of the
-						Moon eons ago - carbon dioxide, ammonia. There seem to be hundreds
-						of millions of tons of it, perhaps billions. There ensued excitement
-						about the new possibilities for settlement this creates - within a
-						small community. Most of the world has already discarded the idea of
-						settling the Moon and wants to press on to Mars, if they favor
-						space settlement at all. We have fogotten the images of lunar bases
-						and towns that were so common during the Apollo days.
-					</p>
-					<p>
-						That small community noted that right beside those reserves of
-						volatiles (being substances that are normally too volatile in the
-						lunar environment to stick around), there are peaks on the crater
-						rims that receive sunlight over 90% of the time. If you can raise
-						solar panels on masts 30 m or so, in the right spots they would get
-						sunlight virtually all the time. So you have solved energy and water,
-						two really big challenges.
-						<br><br>
-						Thus most pushes for lunar bases these days focus on the poles. There
-						is even a business model - turn the water into liquid hydrogen and
-						liquid oxygen, and sell it as feul for satellites, deep space missions,
-						and space stations. Unlike putting a base on Mars, this is a space
-						program we could undertake quickly, it is much safer, and it has
-						practical payoffs here at home - space refeuling would allow much
-						more space exploration.
-						<br><br>
-						It has been repeatedly debated whether the base at Peary
-						Crater should be the first priority, or the first missions should go
-						to Lalande and expand to Peary from there. There are several reasons
-						to doubt hydro-lox fuel production would be a
-						good business in this paradigm. An orbital tether system,
-						ion drive cargo ships, and nuclear shuttles are all part of this plan,
-						which hugely cuts down the importance of local hydrolox.
-						The water needs of Lalande in the early days could be provided from
-						Earth. The choice of nuclear power plants negates the need
-						for constant sun.
-					</p>
-					<p>
-						On further investigation, a version of the construction technique
-						planned for Lalande would work with the minerals found in the highlands,
-						where the poles are. That means a large
-						habitat like proposed for Lalande could be made at Peary, allowing
-						the early research and development needed for the core business in this
-						paradigm - construction - to be done there. The assertion is that
-						construction is the best and fastest way to make a Moon settlement
-						profitable, so it is quite significant to have a way to work at the
-						pole on the core business, as well as volatile mining.
-						In that case, the advantage
-						of the machines not needing to deal with night also weighs in favor
-						of going there first. So, now the idea is that a small settlement is
-						made at Peary, and then the first crew sends machines to Lalande and
-						makes the next hab.
-						<br><br>
-						The early robotic missions would focus on making
-						the hab, not on volatile mining. It is much better for people to be
-						nearby when undertaking something as tricky as extracting volatiles
-						from one of the coldest places in the solar system. Since the focus
-						is developing construction capability, the missions can take more
-						time to perfect and ramp up production of water,
-						carbon dioxide, and ammonia. At first the water that is obtained is
-						only to supplement the fuel supply of the nuclear shuttles. Then it
-						supplies their fuel entirely, and then the new colony has more and
-						more freedom to use water for greenhouses.
-					</p>
-					<p>
-						Finally, Peary starts
-						shipping water, carbon, and ammonia to Lalande in ever larger
-						amounts. That water stays on the Moon, to make ponds, then swimming
-						pools, then small lakes. Maybe some would ship to orbit for fuel,
-						or radiation shielding. But
-						there might be no need. By this time asteroids will be mined for
-						water and metals and may be a better source for needs in open space.
-					</p>
-				</div>
-			</article>
-		</section>
-		<aside>
-			<figure class="sideDiv">
-				<img src="img/PearyArea.jpg" alt="The region around Peary crater, at the
-				lunar north pole">
-				<figcaption>Peary is an old crater at the north pole largely filled in
-					with regolith. It is about 75 km across. The LROC image collage at
-					<a href="http://target.lroc.asu.edu/q3">Quickmap</a> show
-					the region in high detail, but thanks to the sun's very low angle and
-					the polar orbit of LROC, the images are very fragmented and full of
-					solid black shadows.
-				</figcaption>
-			</figure>
-			<figure class="sideDiv">
-				<img src="img/PearyIllumination.jpg" alt="illumination map of sun at the
-				north pole">
-				<figcaption>The rims of Whipple and Hinshelwood craters,
-					at the north end of Peary, could be the best
-					places for habitats and infrastructure. This illumination map shows they
-					have areas of near constant sun. For a better look, go to this
-					<a href="http://bit.ly/2j3qNw9">Quickmap</a> link of the spot. Quickmap
-					also has lots of other data you can see by playing with the menu that
-					opens when you click the three diamonds in the top left corner.
-				</figcaption>
-			</figure>
-		</aside>
-		</div>
-		<div class="container" id="orbital">
-			<section>
-			<article class="outerDiv">
-				<div class="innerDiv">
-					<h1>Orbital colonies - Now we travel the heavens at will</h1>
-					<p>
-						Orbital tethers need asteroids as their stabilizing central mass, and
-						those asteroids are a great place to start a space station.
-					</p>
-					</div>
-				</article>
-			</section>
-		</div>
+{% include PearyColony.html %}
+{% include OrbitalColony.html %}
