--- a/lalande.html
+++ b/lalande.html
@@ -147,8 +147,8 @@ is no place else in the solar system (beyond Earth) that has a fan page like thi
 						<p>Here we can talk about <a class="http://www.psrd.hawaii.edu/Oct04/SaU169.html">SaU 169</a>, a meteorite from the Moon that the linked report explains was traced to an origin near Lalande by a rather large team of people who did a rather extensive
 							study on the little thing. The hotspot shows a thorium level of 12 ppm. The meteorite had a level of 33 ppm<sup class="note tooltip" data-tooltip-content="#ThoriumPPM">
 							[1]</sup> in the impact breccia<sup class="note tooltip" data-tooltip-content="#Breccia">
-							[2]</sup> that mostly composed it. There is <a href="http://i2massociates.com/downloads/ThoriumGeologyandMineralogyofOccurrences.pdf">basalt in Italy</a> with 250 ppm of thorium. Once the bedrock of Lalande is being explored, there could be places
-							with good ore there, concentrations much higher than 33 ppm. That rock would also have the highest concentrations of the rare earth elements and uranium.
+							[2]</sup> that mostly composed it. There is basalt in Italy with 250 ppm of thorium. On Earth that is considered <a href="http://i2massociates.com/downloads/ThoriumGeologyandMineralogyofOccurrences.pdf">high-grade ore</a>. A low-grade ore has about 50 ppm. Once the bedrock of Lalande is being explored, there could be places
+							with good ore there, concentrations much higher than 33 ppm. That rock would also have the highest concentrations of rare earth elements and uranium.
 						</p>
 					</figure>
 					<div class="tooltip_templates">
@@ -161,7 +161,7 @@ is no place else in the solar system (beyond Earth) that has a fan page like thi
 						<span id="Breccia">
 							<img src="https://www.moonwards.com/img/SaU169-cross-section.jpg">
 							<p>
-							Breccia refers to rocks made of smaller chunks glued together by a matrix of another material. So, the thorium content in the chunks could be much higher than the mix overall that the tested breccia is made of. The interesting stuff might be in the little bits floating in the sandy brown.
+							Breccia refers to rocks made of small chunks glued together by a matrix of another rock type. So, the thorium content in the chunks could be much higher than the mix overall that the tested breccia is made of. The interesting stuff might be in the little bits floating in the sandy brown.
 							</p>
 							</span>
 					</div>
@@ -170,7 +170,7 @@ is no place else in the solar system (beyond Earth) that has a fan page like thi
       <p>
        Large areas of the central mountains of Lalande are covered in boulders. Each of the 3 big ones at the top is 20 m wide (22 yards). The whole western side of that mountain is blanketed with boulders like this, but the east side has very few by comparison. Why would that be?
       </p>
-      <p>This area is here because it shows how jumbled the results were even though what you see here was all created by the same event, which unfolded very quickly. The asteroid struck with incredible force and threw a huge quantity of material outwards. The material that was thrown straight up, came straight back down again and landed here. How long would that have taken, a few minutes? At the same time, the shockwaves that met here at the crater center caused the ground to be pushed up and created these mountains. The lava produced by the heat of the blast didn't pool here, it was above the line of the melt pool. Since there are jagged broken rocks here of different materials, as shown by their different tones, light and dark, the stuff that hit the ground here wasn't mixed, and wasn't coated in the lava that was all over. The chunks just hit, broke apart some more thanks to that, and have sat there pretty much exactly the same ever since, for something like 1.5 billion years. They don't even have much dust on them, or the different tones wouldn't show up.
+      <p>This area is here because it shows how jumbled the results were even though what you see here was all created by the same event, which unfolded very quickly. The asteroid struck with incredible force and threw a huge quantity of material outwards. The material that was thrown straight up, came straight back down again and landed here. How long would that have taken, a few minutes? At the same time, the shockwaves that met here at the crater center caused the ground to be pushed up and created these mountains. The lava produced by the heat of the blast didn't pool here, it was above the line of the melt pool. Since there are jagged broken rocks of different materials, as shown by their different tones, light and dark, the stuff that hit the ground here didn't get mixed, and wasn't coated in the lava that was all over. The chunks just hit, broke apart some more thanks to that, and have sat there pretty much exactly the same ever since, for something like 1.5 billion years. They don't even have much dust on them, or the different tones wouldn't show up.
       </p>
 					</figure>
 					<figure class="pix" style="max-width: 750px;">
